examples/errors/bad_adt_field.rsp
; ADT fields cannot be str in MVP.
;;! error_at: 5:16
;;! error_contains: ADT field/payload type

(struct Named [name: str])

(defn main [] -> i32
  0)
